[project]
name = "controller_toolbox_VP1701"
version = "0.0.1"
authors = [
  { name="VP1701", email="veeti.pekonen@gmail.com" },
]
description = "Package containing controller solutions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/VP1701/controller_toolbox"
Issues = "https://github.com/VP1701/controller_toolbox/issues"